--- a/index.ipynb
+++ b/index.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# Pure Python vs. Numpy - Lab\n",
@@ -32,16 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compare 200x200 matrix-matrix multiplication speed\n",
     "import numpy as np\n",
+    "import random\n",
     "\n",
     "# Set up the variables\n",
-    "A = None\n",
-    "B = None"
+    "A = np.random.rand(200,200)\n",
+    "B = np.random.rand(200,200)"
    ]
   },
   {
@@ -61,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pure Python Time: None sec.\n"
+      "Pure Python Time: 7.4426442309923 sec.\n"
      ]
     }
    ],
@@ -76,12 +77,20 @@
     "import timeit\n",
     "\n",
     "# Start the timer\n",
-    "start = None\n",
+    "start = timeit.default_timer()\n",
     "\n",
     "# Matrix multiplication in pure Python\n",
     "\n",
+    "M = np.zeros((200,200))\n",
     "\n",
-    "time_spent = None\n",
+    "for i in range(200):\n",
+    "    for k in range(200):\n",
+    "        for j in range(200):\n",
+    "            M[i,j] += (A[i,k] * B[k,j])\n",
+    "            #out2[i,k] += A[i,j]*B[j,k]  ** solutions code , also had order of i,j,k in for loop\n",
+    "\n",
+    "\n",
+    "time_spent = timeit.default_timer() - start\n",
     "\n",
     "print('Pure Python Time:', time_spent, 'sec.')"
    ]
@@ -96,25 +105,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpy Time: None sec.\n"
+      "Numpy Time: 0.0023816330067347735 sec.\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "# start the timer\n",
-    "start = None\n",
+    "start = timeit.default_timer()\n",
     "\n",
     "# Matrix multiplication in numpy\n",
+    "M = A.dot(B)\n",
     "\n",
+    "time_spent = timeit.default_timer() - start\n",
     "\n",
-    "time_spent = None\n",
     "print('Numpy Time:', time_spent, 'sec.')"
    ]
   },
@@ -145,9 +156,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
